# lyrics_video_maker

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  HEALTH_CHECK.md  MIGRATION.md  README.md  TEST_COVERAGE_TODO.md  TODO.md  build_release.ps1  check_errors_4.txt  check_errors_5.txt  check_errors_6.txt  check_errors_7.txt  check_value.rs  index.html  lint_new.txt  lint_output.txt  lint_target_v4.txt  lint_target_v7.txt  package-lock.json  package.json  run.ps1  run_cli.ps1  setup_env.sh  shadow_opt_verification  tailwind.config.js  test-output.css  vitest.config.js
.agent/: CLAUDE.md  ui_structure.md
.agent/rules/: base.md  browser-guide.md  code-style.md  rust-style-guide.md
.agent/skills/director/: SKILL.md
.agent/specs/: KLYRIC_FORMAT_SPEC.md  klyric-schema.json
.agent/workflows/: build.md  development.md  fix-rust-warning.md  tauri.md
.claude/: settings.json  settings.md
.claude/agents/: code-reviewer.md
.claude/hooks/: skill-rules.json
.claude/skills/: README.md
.claude/skills/design-lyrics/: SKILL.md
.claude/skills/klyric-format/: SKILL.md
.claude/skills/rust-renderer/: SKILL.md
.jules/: bolt.md
crates/klyric-gui/: Cargo.toml
crates/klyric-gui/src/: app.rs  audio.rs  config.rs  main.rs  message.rs  state.rs  theme.rs  worker.rs
crates/klyric-gui/src/utils/: font_loader.rs  mod.rs  refs.rs
crates/klyric-gui/src/widgets/: editor.rs  inspector.rs  ktiming.rs  mod.rs  preview.rs  settings.rs  style_editor.rs  timeline.rs
crates/klyric-preview/: Cargo.toml  check_error.txt  check_error_2.txt  check_error_3.txt
crates/klyric-preview/src/: app.rs  main.rs  window.rs
crates/klyric-renderer/: Cargo.toml  README.md
crates/klyric-renderer/src/: effects.rs  expressions.rs  importer.rs  layout.rs  lib.rs  mock_renderer.rs  parser.rs  style.rs  text.rs  utils.rs  wasm.rs  wasm_renderer.rs
crates/klyric-renderer/src/effects/: drivers.rs  mod.rs
crates/klyric-renderer/src/model/: document.rs  effect.rs  layout.rs  line.rs  mod.rs  modifiers.rs  project.rs  style.rs  theme.rs
crates/klyric-renderer/src/particle/: config.rs  emitter.rs  mod.rs  physics.rs  rng.rs  types.rs
crates/klyric-renderer/src/presets/: factory.rs  impls.rs  mod.rs  traits.rs  types.rs
crates/klyric-renderer/src/presets/particles/: confetti.rs  disintegrate.rs  fire.rs  glow.rs  hearts.rs  mod.rs  rain.rs  sparkle.rs
crates/klyric-renderer/src/presets/transitions/: blur.rs  cross_dissolve.rs  flash.rs  glitch.rs  mod.rs  shake.rs  slide.rs  zoom.rs
crates/klyric-renderer/src/renderer/: line_renderer.rs  mod.rs  particle_system.rs  utils.rs
crates/klyric-renderer/tests/: bolt_context_reuse.rs  bolt_layout_opt.rs  bolt_mixed_effects.rs  bolt_ops_opt.rs  bolt_shadow_opt.rs  bolt_stroke_optimization.rs  bolt_stroke_reveal_cache.rs  bolt_unsafe_buffer.rs  declarative_system_test.rs  helpers.rs  renderer_test.rs  shadow_perf.rs
public/: sample.lrc
samples/: sample.klyric  sample.srt  sample_karaoke - Copy.ass  sample_karaoke.ass
scripts/: ass_to_json.js  test_nll.rs
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  build.rs  check_output.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  mod.rs  render.rs
src-tauri/src/renderer/: mod.rs  text.rs
src-tauri/src/video/: encoder.rs  mod.rs  muxer.rs  pipeline.rs
src/components/: AudioPlayer.jsx  ControlPanel.jsx  ExportPanel.jsx  FileUploader.jsx  FontSelector.jsx  GlobalStyleEditor.jsx  PreferencesModal.jsx  RestoreSessionDialog.jsx  StyleEditor.jsx  WasmPreview.jsx
src/components/Export/: ExportForm.jsx  ExportProgressDialog.jsx
src/components/KTimingEditor/: CharacterPropertyPanel.jsx  DraggableTimeline.jsx  KTimingEditor.css  KTimingHeader.jsx  SpectrumView.jsx  TimelineView.jsx  WaveformView.jsx  index.jsx
src/components/KTimingEditor/hooks/: useKTimingShortcuts.js  useKTimingShortcuts.test.js  useKTimingSync.js  useKTimingSync.test.js  useResizablePanel.js  (+1 more)
src/components/LyricsEditor/: LyricLineEditor.jsx  LyricsEditor.css  LyricsList.jsx  index.jsx
src/components/VideoExportPanel/: VideoExportPanel.css  VideoExportPanel.jsx  index.js
src/components/ui/: JsonTree.jsx  color-picker.jsx  slider.jsx  tabs.jsx
src/constants/: index.js
src/data/: sampleLyrics.js
src/effects/: EffectManager.js
src/effects/presets/: index.js  utils.js
src/hooks/: useAudioAnalyzer.js  useAudioSync.js  useLyricSync.js  useSimulatedAudio.js  useSpectrogramData.js  useVideoExport.js  useWaveformData.js
src/pages/: DebugPage.jsx  ExportPage.jsx  PreviewPage.css  PreviewPage.jsx
src/schemas/: klyric-v2.0.schema.json
src/store/: useAppStore.js
src/types/: KLyricDocument.ts
src/utils/: KLyricFormat.js  KLyricMigrator.js  KLyricSanitizer.js  fontCache.js  karaokeUtils.js  lyricParsers.js  timeUtils.js
src/workers/: audioWorker.js
