[package]
name = "klyric-gui"
version = "0.1.0"
edition = "2021"
description = "Iced-based GUI for KLyric video maker"

[[bin]]
name = "klyric"
path = "src/main.rs"

[dependencies]
# GUI Framework
iced = { version = "0.13", features = ["canvas", "image", "tokio"] }

# Renderer
klyric-renderer = { path = "../klyric-renderer" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File dialogs
rfd = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling

# Error handling
anyhow = "1"

# Audio
rodio = "0.19"

# Font utilties
ttf-parser = "0.20"
dirs = "5.0"
walkdir = "2"
ignore = "0.4"
