[package]
name = "klyric-preview"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
glutin = "0.31"
glutin-winit = "0.4"
raw-window-handle = "0.5"
skia-safe = { version = "0.75", features = ["gl", "textlayout"] }
gl = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[dependencies.klyric-renderer]
path = "../klyric-renderer"
