[package]
name = "klyric-renderer"
version = "0.1.0"
edition = "2021"
description = "Pure Rust KLyric v2.0 renderer - WASM and native compatible"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graphics / 2D rendering
tiny-skia = "0.11"

# Font/text rendering
ab_glyph = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"

# WASM bindings (optional, only for wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"

[features]
default = []
wasm = []
