[package]
name = "klyric-renderer"
version = "0.1.0"
edition = "2021"
description = "Pure Rust KLyric v2.0 renderer - WASM and native compatible"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graphics / 2D rendering
# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
regex = "1"
chrono = "0.4"
evalexpr = "13.1.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
skia-safe = { version = "0.75", features = ["textlayout", "svg", "gl"] }

# WASM bindings (optional, only for wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.2", features = ["js"] }
tiny-skia = "0.11"
ab_glyph = "0.2"
fontdb = "0.16"
owned_ttf_parser = "0.19"

[features]
default = []
wasm = []
