[package]
name = "klyric-renderer"
version = "0.1.0"
edition = "2021"
description = "Pure Rust KLyric v2.0 renderer - WASM and native compatible"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graphics / 2D rendering
# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
regex = "1"
chrono = "0.4"
evalexpr = "13.1.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
skia-safe = { version = "0.75", features = ["textlayout", "svg", "gl"] }

